TESTS: Adding minor changes and basic feature tests.
